output_10.1.168/gauge_force_quda.h.outputdata.txt
find: unknown predicate `-cuda-path=/sw/summit/cuda/10.1.168'
In file included from <built-in>:1:
/sw/summit/hip/hip2.6-cuda10.1.168/llvm/lib/clang/8.0.1/include/__clang_cuda_runtime_wrapper.h:66:2: error: "Unsupported CUDA version!"
#error "Unsupported CUDA version!"
 ^
/tmp/gauge_force_quda.h-6478d6.hip:17:19: error: unknown type name 'GaugeField'
  void gaugeForce(GaugeField& mom, const GaugeField& u, double coeff, int ***input_path,
                  ^
/tmp/gauge_force_quda.h-6478d6.hip:17:42: error: unknown type name 'GaugeField'
  void gaugeForce(GaugeField& mom, const GaugeField& u, double coeff, int ***input_path,
                                         ^
3 errors generated when compiling for host.
Error while processing /tmp/gauge_force_quda.h-6478d6.hip.

[HIPIFY] info: file './quda/include/gauge_force_quda.h' statistics:

  ERROR: Statistics is invalid due to failed hipification.

  CONVERTED refs count: 0
  UNCONVERTED refs count: 0
  CONVERSION %: 0
  REPLACED bytes: 0
  TOTAL bytes: 817
  CHANGED lines of code: 1
  TOTAL lines of code: 22
  CODE CHANGED (in bytes) %: 0
  CODE CHANGED (in lines) %: 5
  TIME ELAPSED s: 0.19
